--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+.wand-box {
+  margin-top: 300px;
 }
